# dsat-lightning

./: .env_template  .gitignore  README.md  pyproject.toml
configs/: __init__.py  export_onnx.yaml  predict.yaml  train.yaml
configs/callbacks/: default.yaml  early_stopping.yaml  model_checkpoint.yaml
configs/data/: tcsa_polar.yaml
configs/logger/: wandb.yaml
configs/model/: profiler_ir1.yaml
configs/paths/: default.yaml
experiments/IR_only/: History_IR1.yml
scripts/: check_h5.py  export_onnx.py  test_gpu.py  test_image_processor.py  test_wandb.py
src/dsat_lightning/: predict.py  train.py
src/dsat_lightning/dataset/: __init__.py  image_processor.py  tcsa_datamodule.py  tcsa_dataset.py  tcsa_preprocessor.py
src/dsat_lightning/model/: __init__.py  profiler.py  profiler_module.py  utils.py
src/dsat_lightning/model/components/: __init__.py  aux_feature_extractor.py  conv_2d.py  profile_head.py
src/dsat_lightning/utils/: __init__.py  instantiators.py  logging_utils.py  py_logger.py  rich_utils.py  utils.py
